feat: Complete LESS to SCSS migration with conditional cursor enhancements
- Migrate entire stylesheet build system from LESS + Gulp to modern Sass with npm scripts
- Replace all LESS files with SCSS equivalents maintaining identical styling output
- Remove Gulp dependency and gulpfile.js in favor of npm scripts (build:css, watch:css, dev, build)
- Update package.json with sass dependency and modern build scripts
- Implement conditional cursor pointer behavior for increment/decrement controls
- Add CSS custom properties controlled by JavaScript for optimal performance
- Update base-actor-sheet.js with Shift key detection for conditional cursor display
- Enhance localization files with missing keys for improved internationalization
- Update templates with modern patterns and improved accessibility
- Remove deprecated banner.webp and update README.md

Technical improvements:
- Modern Sass @use syntax instead of deprecated @import
- CSS custom properties for efficient cursor state management
- Proper variable namespacing with config module
- npm scripts for simplified development workflow
- Zero breaking changes to existing functionality
- Maintains all visual styling and user experience

--- a/package.json
+++ b/package.json
@@ -1,6 +1,11 @@
 {
-  "dependencies": {
-    "gulp": "4.0.2",
-    "gulp-less": "5.0.0"
+  "scripts": {
+    "build:css": "sass --no-source-map scss/l5r4.scss l5r4.css",
+    "watch:css": "sass --no-source-map --watch scss/l5r4.scss:l5r4.css",
+    "build": "npm run build:css",
+    "dev": "npm run watch:css"
+  },
+  "devDependencies": {
+    "sass": "1.69.5"
   }
 }
